<resources>
    <string name="app_name">MyCalc</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="clear">CLEAR</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="multi">*</string>
    <string name="divide">/</string>
    <string name="my_add">10+10</string>
    <string name="answer">20</string>
    <string name="equal">=</string>
</resources>