<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_background">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="12dp"
        android:text="@string/nine"
        android:background="@drawable/custom_button"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eight"
        android:layout_alignBaseline="@+id/button"
        android:layout_alignBottom="@+id/button"
        android:layout_toEndOf="@+id/button"
        android:background="@drawable/custom_button"/>


    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seven"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_toEndOf="@+id/button2"
        android:background="@drawable/custom_button"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/six"
        android:layout_alignStart="@+id/button"
        android:layout_below="@+id/button"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_button"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/five"
        android:layout_alignStart="@+id/button2"
        android:layout_alignTop="@id/button4"
        android:background="@drawable/custom_button"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/four"
        android:layout_alignStart="@+id/button3"
        android:layout_alignTop="@id/button5"
        android:background="@drawable/custom_button"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three"
        android:layout_alignStart="@+id/button4"
        android:layout_below="@id/button4"
        android:layout_marginTop="13dp"
        android:background="@drawable/custom_button"/>

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button5"
        android:layout_below="@id/button5"
        android:layout_marginTop="13dp"
        android:text="@string/two"
        android:background="@drawable/custom_button"/>

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:layout_alignStart="@+id/button6"
        android:layout_below="@id/button6"
        android:layout_marginTop="13dp"
        android:background="@drawable/custom_button"/>

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:layout_alignStart="@+id/button8"
        android:layout_below="@id/button8"
        android:layout_marginTop="13dp"
        android:background="@drawable/custom_button"/>

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_toEndOf="@+id/button3"
        android:layout_marginStart="12dp"
        android:background="@drawable/custom_button"/>

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub"
        android:layout_alignStart="@+id/button11"
        android:layout_below="@id/button11"
        android:layout_marginTop="13dp"
        android:background="@drawable/custom_button"/>

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multi"
        android:layout_alignStart="@+id/button12"
        android:layout_below="@id/button12"
        android:layout_marginTop="13dp"
        android:background="@drawable/custom_button"/>

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        android:layout_alignStart="@+id/button13"
        android:layout_below="@id/button13"
        android:layout_marginTop="13dp"
        android:background="@drawable/custom_button"/>

    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equal"
        android:layout_alignStart="@+id/button9"
        android:layout_below="@id/button9"
        android:layout_marginTop="13dp"
        android:background="@drawable/custom_button"/>

    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:layout_alignStart="@+id/button7"
        android:layout_below="@id/button7"
        android:layout_marginTop="13dp"
        android:background="@drawable/custom_button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_above="@id/button11"
        android:layout_alignEnd="@id/button11"
        android:layout_marginBottom="39dp"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_add"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_above="@id/textView"
        android:layout_alignEnd="@id/textView"
        android:layout_marginBottom="41dp"/>

</RelativeLayout>